# jpeg_opt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  border.cpp  cmake_install.cmake  ddraw.cpp  feature.cpp  ippr  jpeg.cpp  jpegwrite.cpp  main.cpp  morpho.cpp  pca.cpp  readme.txt  thresh.py  util.cpp
include/: border.h  ddraw.h  dicision.h  feature.h  intellisense.h  jpeg.h  jpeglib.h  morpho.h  pca.h  util.h
python/: 1.py  morpho.py  thresh.py  watershed.py
